# Agent-Memory-Architecture-Protocol

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODOS.md  TODOS2.md  amap-v3-deep-review-brainstorm.md  install.sh  pyproject.toml  upgrade.md
.agent/adapters/: README.md  capabilities.yaml  registry.yaml
.agent/procedures/: bootstrap.md  context-loader.md  executor.md  reviewer.md  token-tracking.md
.agent/profiles/: README.md  execution-mode.yaml
.agent/rules/: RULES.md  rules-exec.md  rules-flow.md  rules-guard.md  rules-knowledge.md  rules-tool.md
.agent/scripts/: bootstrap.md  context-compressor.md  context-loader.md
.agent/skills/: skill-index.yaml
.agent/templates/: README.md
.agent/tools/: README.md
.agent/workflows/: README.md  approve-conventions.md  approve-dna.md  convention-scan.md  dna-scan.md  idea-to-task.md  index-source.md  task.md  tdd.md
.amap/: DEVELOPMENT_RULES.md  meta-prompt.md
.amap/knowledge/: README.md
.amap/procedures/: bootstrap.md  context-compressor.md  context-loader.md  decision-gate.md  executor.md  token-tracking.md
.amap/profiles/: agent-memory-mcp-only-setup.md  execution-mode.yaml
.amap/rules/: rules-exec.md  rules-flow.md  rules-guard.md  rules-knowledge.md  rules-tool.md
.amap/skills/: skill-index.yaml
.amap/tools/: README.md
.amap/workflows/: README.md  approve-conventions.md  approve-dna.md  convention-scan.md  dna-scan.md  idea-to-task.md  index-source.md  task.md  tdd.md
.knowledge-layer/: README.md
.knowledge-layer/active/: .gitignore
.knowledge-layer/archive/: ARCHIVE_LOG.md
.knowledge-layer/long-term/: author-dna.draft.yaml  author-dna.yaml  conventions.yaml
.knowledge-layer/templates/: AGENT_TRANSPARENCY.tpl.md  ARCHIVE_META.tpl.md  CONTEXT_REQUEST.tpl.md  CONTRACT_CHANGE_REQUEST.tpl.md  CONTRACT_DAG.tpl.md  CONTRACT_SNAPSHOT.tpl.md  EXPLORE_CONTEXT.tpl.md  INTEGRATION_REQUEST.tpl.md  KNOWLEDGE_PACK.tpl.md  TOKEN_LOG.tpl.md  author-dna.draft.yaml  changerequest.md  conventions.yaml  feature.md  fixbug.md  ideation.md  knowledge-snapshot.md  multi-agent-escalation-sketch.md  persona.template.yaml  persona.yaml
.maika/: DEVELOPMENT_RULES.md  meta-prompt.md
.maika/knowledge/: README.md
.maika/procedures/: bootstrap.md  token-tracking.md
.maika/profiles/: agent-memory-mcp-only-setup.md  execution-mode.yaml
.maika/rules/: RULES.md  rules-exec.md  rules-flow.md  rules-guard.md  rules-knowledge.md  rules-tool.md
.maika/tools/: README.md
.maika/workflows/: tdd.md  (+4 more)
cli/: __init__.py  amap.py  maika.py  plugin-manifest.yaml  renderer.py  scaffold.py
docs/: AMAP-v3-assessment.md  Maika-v3-assessment.md  SP3-CLI-MIGRATION-REVIEW.md  SP3-CLI-MIGRATION.patch  amap-file-ownership-policy.md  maika-file-ownership-policy.md
(+307 files in other folders)
