[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amap-cli"
version = "3.0.0"
description = "AMAP — Agent Memory Architecture Protocol CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "VIethoangnguyenle"},
]
keywords = ["ai", "agent", "memory", "architecture", "protocol", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
amap = "cli.amap:main"

[project.urls]
Homepage = "https://github.com/VIethoangnguyenle/Agent-Memory-Architecture-Protocol"
Repository = "https://github.com/VIethoangnguyenle/Agent-Memory-Architecture-Protocol"

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.setuptools.package-data]
cli = [
    "plugin-manifest.yaml",
]
